--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
                     UGA. As a Postdoc, I’ll focus on scientific publications for the suite of technologies that I’m 
                     actively developing (see below) and collaborate with the <a href="https://usnan.nmrhub.org/home" target="_blank">Network for Advanced NMR</a> to advance sharing science.</p>
                
-                    <span><b><a href="https://github.com/aemoore62/resume/blob/gh-pages/abigail_elizabeth_resume.pdf" target="_blank">Resume</a></h2></b></span>
+                    <h2><a href="https://github.com/aemoore62/resume/blob/gh-pages/abigail_elizabeth_resume.pdf" target="_blank">Resume</a></h2>
                 </div><!-- /col-md-6 -->
             </div><!-- / row -->
         </div><!-- /container -->
@@ -452,15 +452,15 @@ for some of my work.</p>
             <div class="container">
     <div class="row">
       <div class="col-md-4 text-center">
-        <img src="https://aemoore62.github.io/resume/images/patagonman_ferry.png" width="200" height="200" alt="patagonman">
+        <img src="https://aemoore62.github.io/resume/images/patagonman_ferry.png" width="300" height="300" alt="patagonman">
         <p>2019 Patagonman, an iron-distance triathlon.</p>
       </div>
       <div class="col-md-4 text-center">
-        <img src="https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg" width="134" height="200" alt="ga jewl">
+        <img src="https://aemoore62.github.io/resume/images/ga_jewel_mid.jpg" width="200" height="300" alt="ga jewl">
         <p>2021 Georgia Jewel, a 100-mile trail run.</p>
       </div>
       <div class="col-md-4 text-center">
-        <img src="https://aemoore62.github.io/resume/images/tabr_monument.jpg" width="150" height="200" alt="tabr">
+        <img src="https://aemoore62.github.io/resume/images/tabr_monument.jpg" width="225" height="300" alt="tabr">
         <p>2023 Trans Am Bike Race, a 4,200-mile, self-supported road cycling race.</p>
       </div>
     </div><!-- /row -->
